recursion.lessons.recursion.koch.Koch.scala.error
Koch:13: error: not found: value legth
	snowFlake(levels, legth);
                          ^